added some tests